demos/tax-office/k8s/tax-office-base/jupyter/jupyter-deployment.yaml
#
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
# Deployment for the Jupyter Notebook application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-notebook
  namespace: tax-office-ns
  labels:
    app: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      serviceAccountName: jupyter-notebook-ksa
      # Set fsGroup: 1000 to match the 'jovyan' user in the official Jupyter
      # image
      securityContext:
        fsGroup: 1000

      # --- Init Container to copy the default notebook(anomaly_detector.ipynb)
      # from ConfigMap to PVC ---
      containers:
        - name: jupyter-container
          image: docker.io/jupyter/base-notebook:x86_64-ubuntu-22.04
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /login
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          volumeMounts:
            - name: notebook-volume
              mountPath: /home/jovyan  # The home directory for 'jovyan' user
          command: ["start-notebook.sh"]
          args:
            - "--NotebookApp.password=$(JUPYTER_Token)"
            - "--NotebookApp.token=''"
            - "--NotebookApp.trust_xheaders=True"

      volumes:
        - name: notebook-volume
          persistentVolumeClaim:
            claimName: jupyter-notebook-pvc
        - name: configmap-notebooks-volume
          configMap:
            name: jupyter-notebooks
            items:
              - key: anomaly_detector.ipynb
                path: anomaly_detector.ipynb
