demos/tax-office/k8s/tax-office-base/jupyter/jupyter-service.yaml
#
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Service to expose the Deployment
apiVersion: v1
kind: Service
metadata:
  name: jupyter-notebook-service
  namespace: tax-office-ns
spec:
  selector:
    app: jupyter
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
  type: LoadBalancer
